import java.text.SimpleDateFormat

plugins {
	id 'fml-loom' version '0.1.local'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

static def buildTime() {
	def df = new SimpleDateFormat("yyyyMMdd")
	df.setTimeZone(TimeZone.getTimeZone("GMT+8"))
	return df.format(new Date())
}

base {
//	archivesName = project.archives_base_name + "-dev-" + buildTime()
	archivesName =  project.archives_base_name
}

repositories {
	mavenLocal()
	maven{
		name = "Spongepowered"
		url = "https://repo.spongepowered.org/repository/maven-public/"
	}
}

loom {
	accessWidenerPath = file("src/main/resources/miteite.accesswidener")
	mergedMinecraftJar()
	setFML(new File("D:\\Projects\\IDEA\\Minecraft\\MITE\\FishModLoader-v3.4.1.jar"))
	mods {
		"MITE-ITE" {
			sourceSet sourceSets.main
		}
	}

}

runClient{
	args("--username", "Xy_Lose", "--session", "a.a.a.a", "--width", 854, "--height", 480)
}

dependencies {

	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.fmlMCPMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	implementation files("D:\\Projects\\IDEA\\Minecraft\\MITE\\RustedIronCore-1.3.9.jar")
	implementation files("D:\\Projects\\IDEA\\Minecraft\\MITE\\RustedIronCore-1.3.9-source.jar")
	implementation files("D:\\Projects\\IDEA\\Minecraft\\MITE\\emi-1.1.23+1.6.4-MITE+fish.jar")
	implementation files("D:\\Projects\\IDEA\\Minecraft\\MITE\\ManyLib-2.2.3.jar")
	implementation("it.unimi.dsi:fastutil:8.5.12")
	implementation files(loom.getFML().toPath())
}

processResources {
	inputs.property "version", project.version

	filesMatching("fml.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		maven {
			name = "ModdedMITE"
			url = uri("https://maven.limingzxc.top/repository/maven-releases/")
			credentials {
				// Read only from gradle.properties (user level, your gradle_home)
				username = project.findProperty("nexusUsername")
				password = project.findProperty("nexusPassword")
			}
		}
	}
}
